# ampersand

./: .gitignore  CMakeLists.txt  ampersand.cmake  setup.py
ampersand/: CMakeLists.txt  desc.hpp  elem.cpp  elem.hpp  fn.hpp  meta.cpp  meta.hpp  strt.hpp  var.hpp
ampersand-examples/strt/: CMakeLists.txt  strt.cpp
ampersand/base/: CMakeLists.txt  alloc.c  alloc.h  atomic.c  atomic.h  default.h  it.c  it.h  list.c  list.h  mem.c  mem.h  obj.c  obj.h  ptr.c  ptr.h  str.c  str.h  type.h  type_atomic.h
ampersand/base/details/: alloc.c  alloc.h  atomic.h  it.c  it.h  list.c  list.h  list_it.c  list_it.h  mem.c  mem.h  obj.c  obj.h  ptr.c  ptr.h  str.c  str.h
ampersand/base/details-arch/x86_64/: atomic_gcc.asm  atomic_msvc.asm
ampersand/base/preset/cstd/: CMakeLists.txt  alloc.c  alloc.h  mem.c  mem.h
ampersand/desc/: CMakeLists.txt  c99.c  c99.cpp  c99.h  c99.hpp  declare.hpp  desc.c  desc.cpp  desc.h  desc.hpp  desc_friend.hpp  func.c  func.h  ops.c  ops.h  script.c  script.h  strt.c  strt.h
ampersand/desc/c99/: CMakeLists.txt  c99.c  c99.h  ctx.c  ctx.h  desc.c  desc.cpp  desc.h  desc.hpp  func.c  func.h  ops.c  ops.h  script.c  script.h  strt.c  strt.h
ampersand/desc/c99/details/: CMakeLists.txt  c99.c  c99.h  ctx.c  ctx.h  desc.c  desc.h  func.c  func.h  obj.c  obj.h  ops.c  ops.h  script.c  script.h  strt.c  strt.h  type.c  type.h  val.c  val.h
ampersand/desc/details/: desc.c  desc.h
ampersand/details/: var.hpp
ampersand/meta/: CMakeLists.txt  declare.hpp  elem.c  elem.h  elem.hpp  func.c  func.h  func.hpp  obj.c  obj.cpp  obj.h  obj.hpp  ops.c  ops.cpp  ops.h  ops.hpp  script.c  script.cpp  script.h  script.hpp  traits.hpp  type.c  type.cpp  type.h  type.hpp  val.c  val.cpp  val.h  val.hpp
ampersand/meta/details/: elem.c  elem.h  func.c  func.h  obj.c  obj.h  ops.c  ops.h  script.c  script.h  type.c  type.h  val.c  val.h
ampersand/meta/ops/: arith.hpp  arith_ops.hpp  bit.hpp  bit_ops.hpp  cmp.hpp  cmp_ops.hpp  logical.hpp  logical_ops.hpp  obj.hpp
ampersand/meta/traits/: common.hpp  elem.hpp  func.hpp  obj.hpp  ops.hpp  res.hpp  script.hpp  type.hpp  val.hpp
example/: CMakeLists.txt  float.cpp  fn.cpp  int.cpp  pack.cpp  var.cpp
example/core/: CMakeLists.txt  float.cpp  int.cpp  pack.cpp  var.cpp
example/trans/: CMakeLists.txt  pack.cpp  var.cpp
examples/: CMakeLists.txt
examples/lang/c/: cls.c  op.c  var.c
include/ap/: core.hpp  grammar.hpp  meta.hpp  trait.hpp  trans.hpp
include/ap/core/: ari.hpp  bit.hpp  bool.hpp  boolean.hpp  call.hpp  cmp.hpp  cond.hpp  core.hpp  float.hpp  fn.hpp  idx.hpp  int.hpp  loop.hpp  move.hpp  operator.hpp  ops.hpp  ord.hpp  pack.hpp  var.hpp
include/ap/core/operator/: ari.hpp  bit.hpp  boolean.hpp  call.hpp  cmp.hpp  idx.hpp  move.hpp  ord.hpp
include/ap/grammar/: fn.hpp  for.hpp  if.hpp  let.hpp  pack.hpp  while.hpp
include/ap/meta/: fn.hpp  meta.hpp  ope.hpp  pack.hpp  src.hpp
include/ap/meta/ope/: func.hpp  num.hpp  op.hpp  var.hpp
include/ap/trait/: arg.hpp  ari.hpp  bit.hpp  bool.hpp  boolean.hpp  cmp.hpp  float.hpp  int.hpp  move.hpp  num.hpp  op.hpp  opc.hpp  ord.hpp  pack.hpp  type.hpp  var.hpp
include/ap/trans/: fn.hpp  ops.hpp  pack.hpp  trans.hpp  var.hpp
include/ap/trans/ops/: ari.hpp  bit.hpp  boolean.hpp  cmp.hpp  func.hpp  mem.hpp  move.hpp  ord.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  ap.c  ap.h  cls.c  cls.h  desc.c  desc.h  func.c  func.h  op.c  op.h  src.c  src.h  type.c  type.h  util.c  util.h  val.c  val.h  var.c  var.h
src/core/: CMakeLists.txt  boolean.cpp  float.cpp  fn.cpp  int.cpp
src/core/ops/: call.cpp
src/details/: cls.c  cls.h  desc.c  desc.h  func.c  func.h  op.c  op.h  src.c  src.h  type.c  type.h  val.c  val.h  var.c  var.h
src/grammar/: CMakeLists.txt
src/lang/c/: CMakeLists.txt  cls.c  cls.h  op.c  op.h  type.c  type.h  val.c  val.h  var.c  var.h
src/lang/c/details/: cls.c  cls.h  op.c  op.h  type.c  type.h  val.c  val.h  var.c  var.h
src/lang/c/details/op/: arith.c  arith.h  bit.c  bit.h  cmp.c  cmp.h  logical.c  logical.h  mov.c  mov.h  pop.c  pop.h  push.c  push.h
src/meta/: CMakeLists.txt  fn.cpp  ope.cpp  pack.cpp  src.cpp
src/meta/ope/: func.cpp  num.cpp  op.cpp  var.cpp
src/op/: arith.c  arith.h  bit.c  bit.h  cmp.c  cmp.h  logical.c  logical.h  mov.c  mov.h  pop.c  pop.h  push.c  push.h
src/trait/: CMakeLists.txt
src/trans/: CMakeLists.txt
src/util/: cls.c  cls.h  op.h  type.c  type.h  var.c  var.h
src/util/op/: arith.c  arith.h  bit.c  bit.h  cmp.c  cmp.h  logical.c  logical.h  mov.c  mov.h  pop.c  pop.h  push.c  push.h
